tests/baselines/reference/objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType(strict=true).errors.txt
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(6,28): error TS2322: Type 'null' is not assignable to type 'string'.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(10,25): error TS2322: Type 'null' is not assignable to type 'number'.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(14,26): error TS2322: Type 'null' is not assignable to type 'boolean'.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(28,10): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(29,10): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(32,10): error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(33,10): error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(36,10): error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(37,10): error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(40,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(41,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(44,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(45,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(48,10): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(49,10): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(52,10): error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(53,10): error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(56,10): error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(57,10): error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(60,10): error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(61,10): error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(64,10): error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(65,10): error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(68,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(69,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(72,10): error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(73,10): error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(76,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(77,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(80,10): error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(81,10): error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(84,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(85,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(88,10): error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(89,10): error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(92,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(93,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(96,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(97,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(100,10): error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts(101,10): error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.


==== objectTypesIdentityWithGenericCallSignaturesDifferingByReturnType.ts (41 errors) ====
    // Two call or construct signatures are considered identical when they have the same number of type parameters and, considering those 
    // parameters pairwise identical, have identical type parameter constraints, identical number of parameters with identical kind(required, 
    // optional or rest) and types, and identical return types.
    
    class A {
        foo<T>(x: T): string { return null; }
                               ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
    }
    
    class B<T> {
        foo(x: T): number { return null; }
                            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'number'.
    }
    
    class C<T> {
        foo(x: T): boolean { return null; }
                             ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'boolean'.
    }
    
    interface I<T> {
        foo(x: T): Date;
    }
    
    interface I2 {
        foo<T>(x: T): RegExp;
    }
    
    var a: { foo<T>(x: T): T }
    var b = { foo<T>(x: T) { return null; } };
    
    function foo1(x: A);
             ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1(x: A); // error
             ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1(x: any) { }
    
    function foo1b(x: B<string>);
             ~~~~~
!!! error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1b(x: B<string>); // error
             ~~~~~
!!! error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1b(x: any) { }
    
    function foo1c(x: C<string>);
             ~~~~~
!!! error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1c(x: C<string>); // error
             ~~~~~
!!! error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1c(x: any) { }
    
    function foo2(x: I<string>);
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: I<string>); // error
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: any) { }
    
    function foo3(x: typeof a);
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: typeof a); // error
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: any) { }
    
    function foo4(x: typeof b);
             ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo4(x: typeof b); // error
             ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo4(x: any) { }
    
    function foo5(x: A);
             ~~~~
!!! error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5(x: B<string>); // ok
             ~~~~
!!! error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5(x: any) { }
    
    function foo5b(x: A);
             ~~~~~
!!! error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5b(x: C<string>); // ok
             ~~~~~
!!! error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5b(x: any) { }
    
    function foo6(x: A);
             ~~~~
!!! error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6(x: I<string>); // ok
             ~~~~
!!! error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6(x: any) { }
    
    function foo7(x: A);
             ~~~~
!!! error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo7(x: typeof a); // ok
             ~~~~
!!! error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo7(x: any) { }
    
    function foo8(x: B<string>);
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: I<string>); // ok
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: any) { }
    
    function foo9(x: B<string>);
             ~~~~
!!! error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo9(x: C<string>); // ok
             ~~~~
!!! error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo9(x: any) { }
    
    function foo10(x: B<string>);
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: typeof a); // ok
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: any) { }
    
    function foo11(x: B<string>);
             ~~~~~
!!! error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11(x: typeof b); // ok
             ~~~~~
!!! error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11(x: any) { }
    
    function foo12(x: I<string>);
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: C<string>); // ok
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: any) { }
    
    function foo12b(x: I2);
             ~~~~~~
!!! error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12b(x: C<string>); // ok
             ~~~~~~
!!! error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12b(x: any) { }
    
    function foo13(x: I<string>);
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: typeof a); // ok
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: any) { }
    
    function foo14(x: I<string>);
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: typeof b); // ok
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: any) { }
    
    function foo15(x: I2);
             ~~~~~
!!! error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo15(x: C<number>); // ok
             ~~~~~
!!! error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo15(x: any) { }